# mdnotesite

backend/mdnoteapi/: manage.py
backend/mdnoteapi/mdnoteapi/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: editor.html  index.html  interface.css  main.js
parses/: CMakeLists.txt  main.cpp
parses/includes/: mdparser.hpp
parses/src/: bold.cpp  boldnitalic.cpp  code.cpp  header.cpp  highlight.cpp  hrule.cpp  image.cpp  italic.cpp  link.cpp  list.cpp  mdparser.cpp  quote.cpp  strikethrough.cpp
parses/src/emojiparser/: emoji.json  emojiMap.hpp
parses/tests/: index.html  main.cpp  test.cpp
